# ContactsApp

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
src/: CMakeLists.txt
src/Contacts/: CMakeLists.txt  Contacts.cpp  Contacts.h
src/Menu/: CMakeLists.txt  Menu.cpp  Menu.h
